# Melonbot

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc  Cargo.toml  README.MD  config.example.json  docker-compose.yml  ecosystem.config.cjs  init.sql  jest.config.cjs  package-lock.json  package.json  testing.ts  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  Eventsub.test.yml  Golang.yml
EventSub/: Makefile  README.md  go.mod  go.sum  main.go  melonbot.eventsub.service
Experimental/server/: Cargo.toml
Experimental/server/scripts/: lib.lua  readonly.lua  types.lua
Experimental/server/scripts/commands/: test.lua
Experimental/server/src/: error.rs  lua.rs  main.rs  state.rs  types.rs
Experimental/server/src/commands/: list.rs  mod.rs  request.rs
Experimental/server/src/lua/: cleanup.rs  mod.rs
Golang/: Dockerfile  Makefile  README.md  go.mod  go.sum  go.work  go.work.sum
Golang/Common/: go.mod  go.sum
Golang/EventSub/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
Migrations/: 10_improve_banphrase.sql  12_timers.sql  12_twitchuid_unique.sql  13_move_7tvid_to_redis.sql  14_timers_title.sql  15_remove_banphrase.sql  1_init.sql  2_create_tables.sql  2_fix_join.sql  3_remove_config.sql  4_default_values.sql  5_drop_viewers.sql  6_bigint.sql  7_morebigint.sql  8_logging.sql  9_user.sql
Migrations/.Old/: 1_init.sql  3_expires_as_seconds.sql  INFO.md
Scripts/: Build.Go.mjs  Secret.EventSubKey.mjs
Scripts/GenerateDatabaseTypes/: .eslintrc.js  .prettierrc  README.md  package.json  tsconfig.json
TwitchFirehose/: README.md
TwitchFirehose/RustClient/: Cargo.toml
TwitchFirehose/Server/: Cargo.toml  config.default.json
TwitchFirehose/Server/src/: lib.rs  main.rs
TwitchFirehose/Server/src/twitch/: mod.rs
TwitchFirehose/Server/src/websocket/: mod.rs
docs/: command.example  docs.md  setup.md
src/: CreateEnv.ts  ErrorHandler.ts  IndividualData.ts  SevenTVGQL.ts  Twitch.ts  globals.d.ts  logger.ts  master.ts  web.ts
src/Helix/: index.ts
src/Models/: Command.ts  Errors.ts  Websocket.ts
src/Modules/: Moderation.ts
src/PreHandlers/: 7tv.can.modify.ts  index.ts  test.ts
src/Typings/: enums.ts  types.d.ts
src/commands/: 7tv.ts  7tvu.ts  PotFriend.ts  add.ts  alias.ts  editor.ts  help.ts  hint.ts  index.ts  join.ts  leave.ts  markov.ts  ping.ts  reload.ts  remove.ts  rust.ts  say.ts  spotify.ts  testman.ts  time.ts  timer.ts  trivia.ts  vanish.ts  yoink.ts
src/disabled/: Stare.ts  byechat.ts  channel.ts  funfact.ts  git.ts  github.ts  pipe.ts  random.ts  settitle.ts  stats.ts  suggest.ts
src/experimental/: lua.ts
src/init/: setup.ts
src/loops/: loops.ts
src/tools/: CrontabHandler.ts  FindClosestChannelToUser.ts  Got.ts  MessageScheduler.ts  (+6 more)
tests/: ArgumentParser.test.ts  Result.test.ts
web/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/wasm/monaco_lsp/: Cargo.toml  worker.d.ts  worker.js
web/wasm/monaco_lsp/src/: lib.rs
(+230 files in other folders)
