[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
log = "0.4.17"
rlua = "0.19.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
simplelog = "0.12.0"
tiny_http = "0.12.0"
